Marcador funcional, Jugar de nuevo WorkInProgress

--- a/PinPongC#.csproj
+++ b/PinPongC#.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Jugadores.cs" />
     <Compile Include="Pelota.cs" />
+    <Compile Include="Puntos.cs" />
     <Compile Include="Tablero.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
